# UdemyCppExercises

./: .clang-tidy  README.md  Settings.md
02_Basics/CharConverter/: Exercise.md
02_Basics/CharConverter/Exercise/: lib.cc
02_Basics/CharConverter/Solution/: lib.cc  lib.h  main.cc
02_Basics/IntCalculator/: Exercise.md
02_Basics/IntCalculator/Exercise/: lib.cc  lib.h
02_Basics/IntCalculator/Solution/: lib.cc  main.cc
02_Basics/MathCalculator/: Exercise.md
02_Basics/MathCalculator/Exercise/: lib.cc  lib.h  main.cc
02_Basics/MathCalculator/Solution/: lib.cc
02_Basics/TimeConverter/: Exercise.md
02_Basics/TimeConverter/Exercise/: lib.cc  main.cc
02_Basics/TimeConverter/Solution/: lib.cc  lib.h  main.cc
03_ArrayPointer/AlgoLib/: Exercise.md
03_ArrayPointer/AlgoLib/Exercise/: lib.cc  main.cc
03_ArrayPointer/AlgoLib/Solution/: lib.cc  lib.h  main.cc
03_ArrayPointer/ArrayLibrary/: Exercise.md
03_ArrayPointer/ArrayLibrary/Exercise/: lib.cc  main.cc
03_ArrayPointer/ArrayLibrary/Solution/: lib.cc  lib.h  main.cc
03_ArrayPointer/StringLibrary/: Exercise.md
03_ArrayPointer/StringLibrary/Exercise/: lib.cc  lib.h
03_ArrayPointer/StringLibrary/Solution/: lib.cc  main.cc
04_MoreBasics/AD1/: Exercise.md
04_MoreBasics/AD1/Exercise/: AdFunctions.cc  AdFunctions.hpp  AdTypes.hpp  main.cc
04_MoreBasics/AD1/Solution/: AdConstants.hpp
04_MoreBasics/AD2/: Exercise.md
04_MoreBasics/AD2/Exercise/: AdFunctions.cc
04_MoreBasics/AD2/Solution/: AdConstants.hpp  AdFunctions.cc  AdFunctions.hpp  AdTypes.hpp
04_MoreBasics/AD3/: Exercise.md
04_MoreBasics/AD3/Exercise/: AdFunctions.cc  AdFunctions.hpp  main.cc
04_MoreBasics/AD3/Solution/: main.cc  (+1 more)
04_MoreBasics/AD4/: Exercise.md
04_MoreBasics/AD5/: Exercise.md
05_Vector/AlgorithmsLIbrary/: Exercise.md
05_Vector/VectorLibrary/: Exercise.md
06_String/AD6/: Exercise.md
06_String/AD7/: Exercise.md
06_String/Compiling/: Exercise.md
06_String/SplitWords/: Exercise.md
07_Container/AD8/: Exercise.md
07_Container/IteratorLibrary/: Exercise.md
07_Container/WordCount/: Exercise.md
08_STL/AlgorithmsLibrary/: Exercise.md
08_STL/StringFunctions/: Exercise.md
09_Objects/ImageTool/: Exercise.md
09_Objects/Shapes/: Exercise.md
09_Objects/StateMachine/: Exercise.md
09_Objects/UML/: Exercise.md
10_Templates/AlgorithmsLibrary/: Exercise.md
10_Templates/UnitsLibrary/: Exercise.md
11_Lambda/FileChecker/: Exercise.md
11_Lambda/UnitsCalculations/: Exercise.md
12_GUI/AdasGui4/Solution/: CMakeLists.txt  Exercise.md
12_GUI/AdasGui4/Solution/data/: lane_data.json
12_GUI/AdasGui4/Solution/scripts/: data.py  lane_data_3d.py
12_GUI/AdasGui4/Solution/src/: AdTypes.hpp  CMakeLists.txt  DataLoaderTypes.hpp  Render.cc  Render.hpp
12_GUI/AdasGui5/Exercise/: CMakeLists.txt
12_GUI/AdasGui5/Exercise/app/: CMakeLists.txt  cycle.hpp
12_GUI/AdasGui5/Exercise/data/: ego_data.json  vehicle_data.json
12_GUI/AdasGui5/Exercise/src/DataLoader/: DataLoaderTypes.hpp
12_GUI/AdasGui5/Exercise/src/Render/: Render.cc  Render.hpp  RenderConstants.hpp
12_GUI/AdasGui5/Exercise/src/Util/: Units.hpp
12_GUI/AdasGui5/Solution/src/DataLoader/: CMakeLists.txt  DataLoader.cc  DataLoader.hpp
12_GUI/AdasGui6/Exercise/src/: CMakeLists.txt
12_GUI/AdasGui6/Exercise/src/AutomatedDriving/: AdConstants.hpp  AdFunctions.cc  AdFunctions.hpp  AdTypes.hpp  CMakeLists.txt
12_GUI/AdasGui6/Exercise/src/DataLoader/: CMakeLists.txt  DataLoader.cc
12_GUI/AdasGui6/Exercise/src/Perception/: CMakeLists.txt  Perception.cc
12_GUI/AdasGui6/Exercise/src/Render/: Render.cc  Render.hpp  RenderTypes.hpp
12_GUI/AdasGui6/Solution/src/Render/: CMakeLists.txt  Render.cc  RenderConstants.hpp
13_Threads/SumComputation/: Exercise.md
utils/: Timer.hpp  string_utils.hpp  utils.hpp
(+191 files in other folders)
